# atlas

./: .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml
.hooks/: format-and-stage.sh
.rules/: architecture.md  milestones.md  plan.md  testing.md  why.md
backend/: __init__.py  config.py  conftest.py
backend/activities/: __init__.py  dummy.py  dummy_test.py
backend/api/: __init__.py  main.py  main_test.py  schemas.py  workflows_test.py
backend/api/routes/: __init__.py
backend/api/routes/core/: __init__.py  dependencies.py  dependencies_test.py
backend/api/routes/health/: health_test.py  router.py
backend/api/routes/workflows/: __init__.py  router.py  workflows_test.py
backend/db/: __init__.py  connection.py  models.py  models_test.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: bf7954d027a0_initial_migration_with_base_models.py
backend/temporal/: __init__.py  client.py  client_test.py
backend/tests/: __init__.py
backend/workers/: __init__.py  worker.py  worker_test.py
backend/workflows/: __init__.py  dummy.py  dummy_test.py
docker/postgres/: init-db.sh
docs/milestones/: milestone-01.md
tests/: __init__.py  test_api.py
